@@ -1,6 +1,6 @@
 AC_PREREQ(2.59)
 
-AC_INIT( [NewWave], [1.1.0], [jmonk@cern.ch], [NewWave])
+AC_INIT( [NewWave], [1.2.0], [jmonk@cern.ch], [NewWave])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([src/WaveletCoefficient.cc])
 AC_CONFIG_HEADERS([config/config.h])
